cydist/cydist.pxd


cdef extern from "cydist_shim.h":
    void cydist_benford_sample_batch(uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_bernoulli_sample_batch(double p, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_beta_binomial_sample_batch(int trials, double alpha, double beta, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_binomial_sample_batch(int trials, double p, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_categorical_sample_batch(const double* probs, int k, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_hypergeometric_sample_batch(int M, int n_success, int N_draws, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_negative_hypergeometric_sample_batch(int M, int n_, int N, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_poisson_binomial_sample_batch(const double* probs, int k, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_rademacher_sample_batch(uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_soliton_sample_batch(double loc, double scale, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_discrete_uniform_sample_batch(int low, int high, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_zipf_sample_batch(int N, double s, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_zipf_mandelbrot_sample_batch(int N, double q, double s, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_beta_negative_binomial_sample_batch(double alpha, double beta, double r, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_borel_sample_batch(double mu, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_conwaymaxwellpoisson_sample_batch(double lambda_, double nu, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_discrete_phase_type_sample_batch(double p1, double p2, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_delaporte_sample_batch(double lambda_, double r, double p, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_extended_negative_binomial_sample_batch(double r, double p, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_floryschulz_sample_batch(double p, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_gausskuzmin_sample_batch(uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_geometric_sample_batch(double p, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_logarithmic_sample_batch(double p, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_mixed_poisson_sample_batch(double shape, double scale, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_negative_binomial_sample_batch(int r, double p, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_panjer_sample_batch(double lambda_, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_parabolic_fractal_sample_batch(double b, double c, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_poisson_sample_batch(double mu, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_skellam_sample_batch(double mu1, double mu2, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_yulesimon_sample_batch(double rho, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_zeta_sample_batch(int N, double s, uint64_t seed, int* out, size_t n_samples) nogil
    void cydist_arcsine_sample_batch(uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_argus_sample_batch(double chi, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_baldingnichols_sample_batch(double f, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_bates_sample_batch(int n_, double lo, double hi, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_beta_sample_batch(double alpha, double beta, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_generalized_beta_sample_batch(double alpha, double beta, double lambda_, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_beta_rectangular_sample_batch(double alpha, double beta, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_continuous_bernoulli_sample_batch(double lambda_, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_continuous_binomial_sample_batch(int n_, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_irwinhall_sample_batch(int n_, double lo, double hi, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_kumaraswamy_sample_batch(double a, double b, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_logit_normal_sample_batch(double mu, double sigma, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_noncentral_beta_sample_batch(double alpha, double beta, double lam, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_pert_sample_batch(double lo, double mode, double hi, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_raised_cosine_sample_batch(double lo, double hi, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_reciprocal_sample_batch(double a, double b, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_triangular_sample_batch(double lo, double mode, double hi, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_u_quadratic_sample_batch(double a, double b, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_uniform_sample_batch(double lo, double hi, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_wigner_semicircle_sample_batch(double lo, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_benini_sample_batch(double alpha, double beta, double gamma, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_benktander_1st_kind_sample_batch(double a, double b, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_benktander_2nd_kind_sample_batch(double a, double b, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_beta_prime_sample_batch(double alpha, double beta, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_burr_sample_batch(double c, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_chi_sample_batch(double df, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_chi_squared_sample_batch(double df, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_noncentral_chi_squared_sample_batch(double df, double ncp, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_inverse_chi_squared_sample_batch(double df, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_scaled_inverse_chi_squared_sample_batch(double df, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_dagum_sample_batch(double c, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_davis_sample_batch(double nu, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_erlang_sample_batch(double a, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_hyper_sample_batch(double lambda1, double lambda2, double w1, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_exponential_sample_batch(double rate, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_hyperexponential_sample_batch(double lambda1, double lambda2, double w1, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_hypoexponential_sample_batch(double rate1, double rate2, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_exponential_logarithmic_sample_batch(double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_f_sample_batch(double dfn, double dfd, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_noncentral_f_sample_batch(double dfn, double dfd, double nc, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_folded_normal_sample_batch(double c, double loc, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_frechet_sample_batch(double c, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_gamma_sample_batch(double shape, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_generalized_gamma_sample_batch(double a, double c, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_inverse_gamma_sample_batch(double shape, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_gamma_gompertz_sample_batch(double shape, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_gompertz_sample_batch(double c, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_shifted_sample_batch(double loc, double rate, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_half_logistic_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_half_normal_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_hotellings_t_squared_sample_batch(double df1, double df2, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_hartmanwatson_sample_batch(double nu, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_inverse_gaussian_sample_batch(double mu, double lambda_, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_generalized_sample_batch(double a, double c, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_kolmogorov_sample_batch(double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_levy_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_log_cauchy_sample_batch(double loc, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_log_laplace_sample_batch(double c, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_log_logistic_sample_batch(double c, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_log_normal_sample_batch(double mu, double sigma, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_log_t_sample_batch(double df, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_lomax_sample_batch(double c, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_matrix_exponential_sample_batch(double rate1, double rate2, double rate3, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_maxwellboltzmann_sample_batch(double a, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_maxwelljuttner_sample_batch(double a, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_mittag_leffler_sample_batch(double alpha, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_nakagami_sample_batch(double nu, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_pareto_sample_batch(double alpha, double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_phase_type_sample_batch(double rate1, double rate2, double rate3, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_poly_weibull_sample_batch(double shape1, double shape2, double weight, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_rayleigh_sample_batch(double scale, uint64_t seed, double* out, size_t n_samples) nogil
    void cydist_relativistic_breitwigner_sample_batch(double rho, uint64_t seed, double* out, size_t n_samples) nogil
